# OpenCLAW-Manager

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  ANALYSIS.md  BUGFIX_2026-03-11.md  BUGFIX_2026-03-11_2.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CONFIG_SKILLS_API_COMPLETE.md  CONTRIBUTING.md  DEV_PLAN.md  DEV_PROGRESS.md  DEV_PROGRESS_2026-03-11.md  FIX_BLANK_SCREEN_SKILLS_INSTALL.md  FIX_LANGUAGE_SKILLS_2026-03-11.md  GITHUB_RELEASE_GUIDE.md  ISSUE_TEMPLATE说明.md  LANGUAGE_SWITCHER_IMPLEMENTATION.md  LICENSE  OPTIMIZATION_2026-03-11.md  PHASE2.5_COMPLETE.md  PHASE2_COMPLETE.md  RBAC_RESEARCH.md  README.md  README_zh-CN.md  RELEASE_NOTES_v1.6.0.md  RELEASE_v2.0.0.md  SECURITY.md  TASKS.md  package.json  pnpm-lock.yaml  push-to-github.ps1  test-fix.js  tsconfig.json  发布后完全指南.md  发布检查清单.md  快速发布说明.md  推送认证说明.md  文件清理完成报告.md  (+1 more)
configs/: config.toml
data/: ocm.db
docs/: DEPLOYMENT.md  项目进度历史记录.md  (+3 more)
src-tauri/: Cargo.toml  check2.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config_watcher.rs  logging.rs  main.rs
src-tauri/src/commands/: audit.rs  auth.rs  backup.rs  config.rs  deployment.rs  dept.rs  error.rs  export.rs  instance.rs  keys.rs  mod.rs  monitor.rs  oauth.rs  saml.rs  security.rs  setup.rs  skill_basic.rs  skills.rs  usage.rs  users.rs  version.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/middleware/: auth.rs
src-tauri/src/services/: db.rs  health_check.rs  instance_discovery.rs  mod.rs  node_bridge.rs  port_scanner.rs  token_blacklist.rs
src-tauri/src/util/: config_utils.rs
src-tauri/src/utils/: docker.rs
(+126 files in other folders)
