[package]
name = "ocm-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
tauri = { version = "^2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 使用 rustls 替代 native-tls，避免依赖 OpenSSL 动态库（避免闪退）
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
chrono = "0.4.38"
tauri-plugin-opener = "^2.0.0"
uuid = { version = "1.6", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
dirs = "5.0"
# SSO 支持
oauth2 = "4.4"
bcrypt = "0.15"
# 审计日志 HMAC 签名
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# JWT认证
jsonwebtoken = "9"
# PBKDF2密码派生
pbkdf2 = "0.12"
# 配置管理
config = "0.14"
# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
md5 = "0.8.0"

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
native-tls = ["tauri/native-tls"]
